Create Section part 1

--- a/css/main.css
+++ b/css/main.css
@@ -19,7 +19,56 @@ a{
     margin : 0 auto;
     position:relative;
 }
-
+.btn {
+    width:130px;
+    padding:10px;
+    border:2px solid #333;
+    border-radius: 4px;
+    color:#333;
+    font-size:16px;
+    font-weight: 700;
+    text-align: center;
+    cursor:pointer;
+    box-sizing:border-box;
+    display:block;
+    transition: 0.4s;
+}
+.btn:hover{
+    background-color:#333;
+    color:#fff;
+}
+.btn.btn--reverse{
+    background-color:transparent;
+    color:#333;
+}
+.btn.btn--reverse:hover{
+    background-color:#333;
+    color:#fff;
+}
+.btn.btn--brown{
+    color:#592B18;
+    border-color:#592B18;
+}
+.btn.btn--brown:hover{
+    background-color:#592B18;
+    color:#fff;
+}
+.btn.btn--gold{
+    color:#D9AA8A;
+    border-color:#D9AA8A;
+}
+.btn.btn--gold:hover{
+    color:#FFF;
+    border-color:#FFF;
+}
+.btn.btn--white{
+    color:#fff;
+    border-color:#fff;
+}
+.btn.btn--white:hover{
+    color:#333;
+    border-color:#FFF;
+}
 /* HEADER */
 header{
     width:100%;
@@ -28,6 +77,7 @@ header{
     /* position:relative; */
     position:fixed;
     top:0;
+    z-index : 9;
 }
 header > .inner{
     height: 120px;
@@ -121,9 +171,7 @@ header .mainmenu{
     z-index: 1;
     display: flex;
 }
-header .mainmenu .item{
-    
-}
+
 header .mainmenu .item .item_name{
     padding : 10px 20px 34px 20px;
     font-family: Arial, sans-serif;
@@ -169,32 +217,79 @@ header .mainmenu .item .item_contents .contents_menu > ul >li ul li{
 header .mainmenu .item .item_contents .contents_menu > ul >li ul li:hover{
     color:#669900;
 }
-header .mainmenu .item .item_contents .contents_texture{
+header .mainmenu .item .item_contents .contents_texture {
     padding:26px 0;
     font-size:12px;
     background-image: url("../images/main_menu_pattern.jpg");
 }
 
-header .mainmenu .item .item_contents .contents_texture h4{
+header .mainmenu .item .item_contents .contents_texture h4 {
    color:#999;
    font-weight: 700;
 }
-header .mainmenu .item .item_contents .contents_texture p{
+header .mainmenu .item .item_contents .contents_texture p {
    color:#669900;
    /* top : 4px left,right : 0px , bottom : 14px */
    margin:4px 0 14px; 
 
 }
 
-header .badges{
+header .badges {
     position: absolute;
     top:132px;
     right: 12px; 
 }
-header .badges .badge{
+header .badges .badge {
     border-radius: 10px;
     overflow: hidden;
     margin-bottom:12px;
     box-shadow: 4px 4px 10px rgba(0,0,0,0.15);
     cursor:pointer;
+}
+
+
+/* Visual */
+
+.visual {
+    margin-top:120px;
+    background-image : url("../images/visual_bg.jpg");
+    background-position: center;
+}
+.visual .inner {
+    height: 646px;
+}
+.visual .title {
+    position:absolute;
+    top:88px;
+    left:-10px;
+}
+.visual .title .btn{
+    position:absolute;
+    top:259px;
+    left:173px;
+}
+.visual .cup1.image {
+    position:absolute;
+    bottom:0;
+    right:-47px;
+}
+.visual .cup1.text {
+    position:absolute;
+    top:38px;
+    right:171px;
+}
+.visual .cup2.image {
+    position:absolute;
+    bottom:0;
+    right:162px;
+}
+.visual .cup2.text {
+    position:absolute;
+    top:321px;
+    right:416px;
+}
+.visual .spoon {
+    position:absolute;
+    bottom:0;
+    left:275px;
 }
