--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@ body{
     font-weight: 400;
     line-height: 1.4;
     font-family: 'Nanum Gothic', sans-serif;
-    height: 3000px;
+    
 }
 
 img{
@@ -38,12 +38,12 @@ a{
     color:#fff;
 }
 .btn.btn--reverse{
-    background-color:transparent;
-    color:#333;
+    background-color: #333;
+    color: #FFF;
 }
 .btn.btn--reverse:hover{
-    background-color:#333;
-    color:#fff;
+    background-color: transparent;
+  color: #333;
 }
 .btn.btn--brown{
     color:#592B18;
@@ -461,4 +461,103 @@ header .badges .badge {
     color:#fff;
 }
 
+/* Rewards */
+.rewards{
+    position:relative;
+}
+.rewards .bg-left{
+    width: 50%;
+    height: 100%;
+    background-color: #272727;
+    position:absolute;
+    top:0;
+    left:0;
+}
+.rewards .bg-right{
+    width: 50%;
+    height: 100%;
+    background-color: #d5c798;
+    position:absolute;
+    top:0;
+    right: 0;
+}
+.rewards .inner{ 
+    background-image: url("../images/rewards.jpg");
+    height: 241px;
+}
+.rewards .btn-group{
+    position:absolute;
+    bottom:24px;
+    right:0;
+    width:250px;
+    display: flex;
+    flex-wrap:wrap;
+}
+.rewards .btn-group .btn.sign-up{
+    margin-right:10px;
+}
+.rewards .btn-group .btn.sign-in{
+    width:110px;
+}
+.rewards .btn-group .btn.gift{
+    margin-top:10px;
+    flex-grow:1;
+}
 
+.youtube {
+    position:relative;
+    height: 700px;
+    background-color: #333;
+    overflow: hidden;
+}
+.youtube .youtube__area{
+   width: 1920px;
+   position: absolute;
+   left:50%;
+   top:50%;
+   background-color: orange; 
+   margin-left:calc(1920px/-2);
+   margin-top:calc(1920px*9/16/-2);
+}
+.youtube .youtube__area::before{
+    content:"";
+    display: block;
+    width: 100%;
+    height: 0;
+    padding-top: 56.25%;
+}
+.youtube .youtube__cover{
+    background-image: url("../images/video_cover_pattern.png");
+    background-color:rgba(0,0,0,0.3);
+    position:absolute;
+    top:0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+#player{
+    width: 100%;
+    height: 100%;
+    position:absolute;
+    top:0;
+    left: 0;
+}
+.youtube .inner{
+    height: 700px;
+    
+}
+.youtube .floating1{
+    position:absolute;
+    top:50px;
+    left:0;
+}
+.youtube .floating2{
+    position:absolute;
+    top:350px;
+    left:150px;
+}
+.youtube .floating3{
+    position:absolute;
+    bottom:-200px;
+    right:0;
+}
